--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,3 +14,13 @@ html {
  .botonera{
     padding-bottom: 6rem;
  }
+
+ .enlace{
+   width: 100%;
+   height: 100%;
+ }
+
+ a, a:hover, a:focus, a:active {
+   text-decoration: none;
+   color: inherit;
+ }
