--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,10 +8,13 @@ html {
  }
  
  body {
-  background: url(/img/fondo.jpg);
-  background-color: #333333;
-   height: 100%;
-   min-height: 100%;
+    background: url("../img/fondo.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-color: rgb(144,144,144);
+    height: 100%;
+    min-height: 100%;
  }
 
  .botonera{
