--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,7 +8,7 @@ html {
  }
  
  body {
-    background: url("../img/fondo.jpg");
+    background: url("../img/fondo.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
